--- a/app/src/main/res/xml/preferences_backup.xml
+++ b/app/src/main/res/xml/preferences_backup.xml
@@ -19,28 +19,28 @@
                   android:key="backup">
 
     <PreferenceCategory
-            android:title="本地备份"
+            android:title="@string/text_local_backup"
             android:key="localBackup"
             app:iconSpaceReserved="false">
 
         <Preference
                 android:key="localBackupNow"
-                android:summary="备份文件将保存在"
-                android:title="立即备份"
+                android:summary="@string/text_backup_save"
+                android:title="@string/text_go_backup"
                 app:iconSpaceReserved="false"/>
 
         <Preference
                 android:key="localRestore"
-                android:summary="将从xxx恢复"
-                android:title="恢复备份"
+                android:summary="@string/text_restore_content"
+                android:title="@string/text_restore"
                 app:iconSpaceReserved="false"/>
 
         <!-- 只用于显示 -->
         <CheckBoxPreference
                 android:defaultValue="true"
                 android:key="localAutoBackupShow"
-                android:summary="数据有改变时备份（不可手动关闭）"
-                android:title="自动备份"
+                android:summary="@string/text_auto_backup_content"
+                android:title="@string/text_auto_backup"
                 android:selectable="false"
                 app:iconSpaceReserved="false"/>
 
@@ -48,45 +48,45 @@
         <CheckBoxPreference
                 android:defaultValue="true"
                 android:key="localAutoBackup"
-                android:summary="数据有改变时备份（不可手动关闭）"
-                android:title="自动备份"
+                android:summary="@string/text_auto_backup_content"
+                android:title="@string/text_auto_backup"
                 app:isPreferenceVisible="false"
                 android:selectable="false"
                 app:iconSpaceReserved="false"/>
     </PreferenceCategory>
 
     <PreferenceCategory
-            android:title="云备份"
+            android:title="@string/text_cloud_backup"
             android:key="cloudBackup"
             app:iconSpaceReserved="false">
         <EditTextPreference
                 android:key="webdavUrl"
                 app:iconSpaceReserved="false"
                 app:useSimpleSummaryProvider="true"
-                android:title="WebDAV地址"/>
+                android:title="@string/text_webdav_url"/>
 
         <EditTextPreference
                 android:key="webdavUserName"
                 app:iconSpaceReserved="false"
                 app:useSimpleSummaryProvider="true"
-                android:title="WebDAV授权账户"/>
+                android:title="@string/text_webdav_account"/>
 
         <EditTextPreference
                 android:key="webdavPsw"
                 app:iconSpaceReserved="false"
-                android:title="WebDAV授权密码"/>
+                android:title="@string/text_webdav_password"/>
 
         <Preference
                 android:key="cloudBackupNow"
-                android:summary="备份文件将保存在"
-                android:title="立即备份"
+                android:summary="@string/text_backup_save"
+                android:title="@string/text_go_backup"
                 android:enabled="false"
                 app:iconSpaceReserved="false"/>
 
         <Preference
                 android:key="cloudRestore"
-                android:summary="将从xxx恢复"
-                android:title="恢复备份"
+                android:summary="@string/text_restore_content"
+                android:title="@string/text_restore"
                 android:enabled="false"
                 app:iconSpaceReserved="false"/>
         <!--DropDownPreference-->
@@ -98,18 +98,19 @@
                 app:useSimpleSummaryProvider="true"
                 android:entries="@array/cloud_auto_backup_mode_titles"
                 android:entryValues="@array/cloud_auto_backup_mode_values"
-                android:title="自动备份模式"/>
+                android:title="@string/text_auto_backup_mode_title"/>
 
         <Preference
                 android:key="webdavHelp"
-                android:title="坚果云授权教程"
+                android:title="@string/text_webdav_help"
                 android:summary="http://help.jianguoyun.com/?p=2064"
                 app:iconSpaceReserved="false"/>
 
         <CheckBoxPreference
                 android:key="webdavEnable"
-                android:title="云备份测试"
+                android:title="cloud_backup_test"
                 android:enabled="false"
+                app:isPreferenceVisible="false"
                 android:defaultValue="false"
                 app:iconSpaceReserved="false"/>
 
