--- a/app/src/main/res/xml/preferences_settings.xml
+++ b/app/src/main/res/xml/preferences_settings.xml
@@ -105,7 +105,7 @@
     </PreferenceCategory>
 
     <PreferenceCategory
-            android:title="@string/text_luck"
+            android:title="@string/text_lock"
             android:key="screen"
             app:iconSpaceReserved="false">
         <ListPreference
