--- a/app/src/main/res/layout/activity_assets.xml
+++ b/app/src/main/res/layout/activity_assets.xml
@@ -149,7 +149,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="20dp"
-                android:background="@drawable/bg_donate"
+                android:background="@drawable/bg_button_blue"
                 android:clickable="true"
                 android:focusable="true"
                 android:foreground="?attr/selectableItemBackground"
