--- a/app/src/main/res/layout/fragment_transfer_assets.xml
+++ b/app/src/main/res/layout/fragment_transfer_assets.xml
@@ -29,7 +29,8 @@
         android:id="@+id/tvSortTip"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="15dp"
+        android:layout_marginBottom="5dp"
+        android:layout_gravity="top|center_horizontal"
         android:text="@string/text_tip_transfer"
         android:textColor="@color/colorTextHint"
         android:textSize="13sp"
@@ -42,8 +43,8 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="10dp"
         android:src="@drawable/ic_down" />
 
     <include
